force-app/main/default/objects/CLM_Rating_Value__c/CLM_Rating_Value__c.object-meta.xml
<CustomObject>
    <label>CLM Rating Value</label>
    <nameField>
        <displayFormat>CLMV-{00000}</displayFormat>
        <label>Rating Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLM Rating Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>