force-app/main/default/objects/CLM_Rating_Value__c/fields/CLM_Presentation_Session__c.field-meta.xml
<CustomField>
    <fullName>CLM_Presentation_Session__c</fullName>
    <label>CLM Presentation Session</label>
    <referenceTo>CLM_Presentation_Session__c</referenceTo>
    <relationshipLabel>CLM Rating Values</relationshipLabel>
    <relationshipName>CLM_Rating_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>