force-app/main/default/objects/CLM_Rating_Value__c/fields/CLM_Rating_Layout__c.field-meta.xml
<CustomField>
    <fullName>CLM_Rating_Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLM Rating Layout</label>
    <referenceTo>CLM_Rating_Layout__c</referenceTo>
    <relationshipLabel>CLM Rating Values</relationshipLabel>
    <relationshipName>CLM_Rating_Values</relationshipName>
    <type>Lookup</type>
</CustomField>