force-app/main/default/objects/CLM_Rating_Value__c/fields/Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Key__c</fullName>
    <label>Field Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>