force-app/main/default/objects/CLM_Rating_Value__c/fields/Value_JSON__c.field-meta.xml
<CustomField>
    <fullName>Value_JSON__c</fullName>
    <label>Value JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>